--- a/Accueil/acceuil.html
+++ b/Accueil/acceuil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Carousel</title>
+  <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -9,38 +9,30 @@
 </head>
 <body>
 
+<!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
+  <!-- Indicators/dots -->
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
     <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
     <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
   </div>
   
+  <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../Image/berlin.jpg" alt="Berlin" class="d-block" style="width:50%">
-      <div class="carousel-caption">
-        <h3>BERLIN BERLIN</h3>
-        <p>Patrick Haudecour, Gérard Sibleyras</p>
-      </div>
+      <img src=".\Image\berlin.jpg" alt="Berlin" class="d-block" style="width:50%">
     </div>
     <div class="carousel-item">
-      <img src="../Image/paris.jpg" alt="Paris" class="d-block" style="width:50%">
-      <div class="carousel-caption">
-        <h3>Paris</h3>
-        <p>Martin Desbat, Jeanne Boyer</p>
-      </div> 
+      <img src=".\Image\paris.jpg" alt="paris" class="d-block" style="width:50%">
     </div>
     <div class="carousel-item">
-      <img src="../Image/tokyo.jpg" alt="Tokyo" class="d-block" style="width:50%">
-      <div class="carousel-caption">
-        <h3>Tokyo</h3>
-        <p>Jake Adelstein</p>
-      </div>  
+      <img src=".\Image\tokyo.jpg" alt="Tokyo" class="d-block" style="width:50%">
     </div>
   </div>
   
+  <!-- Left and right controls/icons -->
   <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </button>
