--- a/Accueil/entete.html
+++ b/Accueil/entete.html
@@ -15,7 +15,7 @@
           
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="javascript:void(0)"><img src="biblio.jpg">
+    <a class="navbar-brand" href="javascript:void(0)"><img src="../Image/biblio.jpg">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
       <span class="navbar-toggler-icon"></span>
@@ -41,5 +41,3 @@
 
 </body>
 </html>
-
-
