--- a/Accueil/carousel.html
+++ b/Accueil/carousel.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+  <div class="container-fluid mt-3">
+    <p class="text-center">Dernières acquisitions:</p>
+  </div>  
+
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
   <div class="carousel-indicators">
@@ -19,21 +23,27 @@
   
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../Image/berlin.jpg" alt="Berlin" class="d-block" style="width:50%">
+      <div class="d-flex justify-content-center">
+        <img src="../Image/berlin.jpg" style="width:30%" class="align-middle" alt="Berlin">
+    </div>
       <div class="carousel-caption">
         <h3>BERLIN BERLIN</h3>
         <p>Patrick Haudecour, Gérard Sibleyras</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../Image/paris.jpg" alt="Paris" class="d-block" style="width:50%">
+      <div class="d-flex justify-content-center">
+        <img src="../Image/paris.jpg" alt="img.png" style="width:30%" class="align-middle" alt="Paris">
+    </div>
       <div class="carousel-caption">
         <h3>Paris</h3>
         <p>Martin Desbat, Jeanne Boyer</p>
       </div> 
     </div>
     <div class="carousel-item">
-      <img src="../Image/tokyo.jpg" alt="Tokyo" class="d-block" style="width:50%">
+      <div class="d-flex justify-content-center w-100 h-100">
+        <img src="../Image/tokyo.jpg" style="width:30%" class="align-middle" alt="Tokyo" >
+      </div>
       <div class="carousel-caption">
         <h3>Tokyo</h3>
         <p>Jake Adelstein</p>
@@ -47,11 +57,6 @@
   <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
     <span class="carousel-control-next-icon"></span>
   </button>
-</div>
-
-<div class="container-fluid mt-3">
-  <h3>Carousel Example</h3>
-  <p>The following example shows how to create a basic carousel with indicators and controls.</p>
 </div>
 
 </body>
