Ajout du formulaire

--- a/entete.html
+++ b/entete.html
@@ -10,20 +10,21 @@
 <body>
 
 <div class="container-fluid mt-3">
-    <h5>La bibilothéque de Moulinsart est fermée au public jusqu'à nouvel ordre. Mais il vous est possible de réserver et retirer vos livres via notre service Biblio Drive !</h5>
+    <h5>La bibilothéque de Moulinsart est fermée au public jusqu'à nouvel ordre. Mais il vous est possible de réserver et retirer vos livres via notre service Biblio Drive ! </h5>
 </div>
           
+
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="javascript:void(0)"><img src="../Image/biblio.jpg">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+    <!--<a class="navbar-brand" href="javascript:void(0)"><img src="../Image/biblio.jpg" >
+    </a>-->
+    <button class="navbar-toggler" type="submit" data-bs-toggle="collapse" data-bs-target="#mynavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="mynavbar">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-            <h5> <p class="text-white"> Recherche dans le calogue (saisie du nom de l'auteur)</h5>
+            <h5> <p class="text-white"> Recherche dans le catalogue:</h5>
         </li>
       </ul>
       <form class="d-flex">
@@ -34,10 +35,10 @@
   </div>
 </nav>
 
-<div class="container-fluid mt-3">
+<!--<div class="container-fluid mt-3">
   <h3>Navbar Forms</h3>
   <p>You can also include forms inside the navigation bar.</p>
-</div>
+</div>-->
 
 </body>
 </html>
