--- a/acceuil.html
+++ b/acceuil.html
@@ -41,7 +41,7 @@
   </button>
 </div>
 
-<div class="container-fluid mt-3">
+<div class="container-fluid -3">
   <h3>Carousel Example</h3>
   <p>The following example shows how to create a basic carousel with indicators and controls.</p>
 </div>
