--- a/entete.html
+++ b/entete.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 
-<div class="container-fluid mt-3">
+<div class="container-fluid sm-3">
     <h5>La bibilothéque de Moulinsart est fermée au public jusqu'à nouvel ordre. Mais il vous est possible de réserver et retirer vos livres via notre service Biblio Drive ! </h5>
 </div>
-          
+<br>          
 
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <div class="container-fluid">
