--- a/entete.html
+++ b/entete.html
@@ -22,8 +22,12 @@
       <div class="collapse navbar-collapse" id="mynavbar">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
+            <a class="nav-link" href="accueil.php">Accueil</a>
               <h5> <p class="text-white"> Recherche dans le catalogue:</h5>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="panier.php">Mon Panier</a>
+        </li>
         </ul>
         <form class="d-flex" action="lister-livres.php" method="GET">
           <input class="form-control me-3" type="text" name="recherche" placeholder="Saisissez le nom d'un auteur">
